--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node cli.js"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +14,6 @@
     "inquirer": "^9.2.11",
     "jest": "^29.7.0",
     "svg.js": "^2.7.1"
-  }
+  },
+  "type": "module"
 }
